# actix-web-server-tutorial

./: .env  .gitignore  Cargo.toml
wasm-client/: Cargo.toml
wasm-client/src/: errors.rs  lib.rs
wasm-client/src/models/: course.rs
wasm-client/www/: index.html  index.js  package.json
web-app/: .env  Cargo.toml
web-app/src/: errors.rs  handlers.rs
web-service/: .env  Cargo.toml  db.sql
web-service/src/: db_access.rs  errors.rs  handlers.rs  models.rs  routers.rs  state.rs
web-service/src/dbaccess/: course.rs  teacher.rs
web-service/src/handlers/: course.rs  general.rs  teacher.rs
web-service/src/models/: course.rs  mod.rs  teacher.rs
webapp/: Cargo.toml
webapp/src/: models.rs  routers.rs
webapp/static/: register.html  teachers.html
