[package]
default-run = "teacher-service"
edition = "2021"
name = "web-service"
version = "0.1.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.7.0"
actix-web = "4.2"
chrono = {version = "0.4", features = ["serde"]}
dotenv = "0.15"
serde = {version = "1.0", features = ["derive"]}
#openssl = {version= "0.10", features = ["vendored"]}
sqlx = {version = "0.5.13", default_features = false, features = [
	"postgres", 
	"runtime-tokio-rustls",
	"macros",
	"chrono"
]}

[[bin]]
name = "server1"

[[bin]]
name = "teacher-service"
