[package]
edition = "2021"
name = "webapp"
version = "0.1.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6"
actix-web = "4.2"
awc = "3.0"
chrono = {version = "0.4", features = ["serde"]}
dotenv = "0.15"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tera = "1.15"
